--- a/Logga.Core/Views/Shared/_Layout.cshtml
+++ b/Logga.Core/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link rel="shortcut icon" type="image/ico" href="~/LoggaIcon.ico">
     @Styles.Render("~/Content/css")
 </head>
 <body>
